<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_type"
        android:layout_gravity="center"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:paddingVertical="@dimen/header_padding_vertical"/>

    <Button
        android:id="@+id/btnLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:layout_margin="@dimen/button_margin"
        android:paddingVertical="@dimen/button_padding_vertical"/>
    <Button
        android:id="@+id/btnArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_margin="@dimen/button_margin"
        android:paddingVertical="@dimen/button_padding_vertical"/>
    <Button
        android:id="@+id/btnVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:layout_margin="@dimen/button_margin"
        android:paddingVertical="@dimen/button_padding_vertical"/>
    <Button
        android:id="@+id/btnMass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mass"
        android:layout_margin="@dimen/button_margin"
        android:paddingVertical="@dimen/button_padding_vertical"/>
    <Button
        android:id="@+id/btnTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_margin="@dimen/button_margin"
        android:paddingVertical="@dimen/button_padding_vertical"/>

</LinearLayout>